spacing issue

--- a/assets/sass/08-addons/landingpage.scss
+++ b/assets/sass/08-addons/landingpage.scss
@@ -91,10 +91,7 @@
           justify-content: flex-end;
       }
    
-      main {
-          margin-top: 2rem!important;
-          margin-bottom: 10rem!important;
-      }
+   
       .icons {
           margin-top: 10rem;
           margin-bottom: 10rem;
